Fixed case study text on mobile

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -904,7 +904,7 @@ font-family:mMilk;
 .caseStudyBriefText{
     height:67%;
     font-family:mLight;
-    font-family:0.73vw;
+    font-size:0.73vw;
     /* background:green; */
     
 }
